# p06-Opensource_Backend

./: .gitignore  LICENSE  package-lock.json  readme.md
Architecture/: p06_HighlevelArchitecture.docx  p06_LowLevelArchitectureAndDataModel.docx  ~$6_HighlevelArchitecture.docx  ~$6_LowLevelArchitectureAndDataModel.docx
Development/Sprint-1/: Evaluation-sprint1.md  readme.md
Development/Sprint-1/server/: Cargo.toml
Development/Sprint-1/server/src/: auth.rs  lib.rs  router.rs  utils.rs
Development/Sprint-1/server/src/apis/: auth.rs  auth_test.rs  collection.rs  collection_test.rs  document.rs  document_test.rs  logs.rs
Development/Sprint-1/server/src/middleware/: auth.rs  tracer.rs  validate_session.rs
Development/Sprint-1/server/src/utils/: jwt.rs
Development/Sprint-2/: TestCases_Opensource_Backend.xlsx  readme.md
Development/Sprint-3/: Testcases_Sprint3_Opensource_Backend.xlsx  readme.md
Prototype/: .gitignore  p06_PrototypeRequirements.docx  package-lock.json  readme.md
Prototype/server/: Cargo.toml
Prototype/server/src/: error.rs  lib.rs  main.rs  router.rs
Prototype/server/src/apis/: collection.rs  document.rs
Requirements/: Requirements Specifications.docx  p06_RequirementsSpecifications.docx  p06_SystemRequirements.docx  readme.md  ~$6_RequirementsSpecifications.docx  ~$6_SystemRequirements.docx
Reviews/: Evaluation-Sprint2.md  Evaluation-Sprint3.md  Evaluation-Sprint4.md  p06_Final_Project_Report.docx  p06_HighlevelArchitecture.docx  p06_PrototypeRequirements.docx  p06_RequirementsSpecifications.docx  p06_SoftwareProcessSelectionandProjectPlan.docx  p06_SystemRequirements.docx
Testing/: package.json
(+419 files in other folders)
