[package]
name = "ezbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ejdb = "0.4.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
