[package]
name = "ezbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["macros"] }
chrono = "0.4.31"
ejdb = "0.4.1"
rand = "0.8.5"
random-string = "1.0.1"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.4.4", features = ["cors"] }
